added DateService module

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>Date</module>
         <module>App</module>
+        <module>DateService</module>
     </modules>
 
     <properties>
