--- a/Date/pom.xml
+++ b/Date/pom.xml
@@ -27,7 +27,7 @@
     </dependencies>
 
     <build>
-        <finalName>date</finalName>
+        <finalName>dateservice</finalName>
     </build>
 
 </project>
