--- a/App/pom.xml
+++ b/App/pom.xml
@@ -41,10 +41,22 @@
             <version>42.2.16</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.soap</groupId>
+            <artifactId>javax.xml.soap-api</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxws</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
-        <finalName>Orders</finalName>
+        <finalName>orders</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
