--- a/DateService/pom.xml
+++ b/DateService/pom.xml
@@ -11,12 +11,12 @@
     <packaging>ear</packaging>
 
     <groupId>org.zhadaev.date</groupId>
-    <artifactId>DateService</artifactId>
+    <artifactId>date-service</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.zhadaev.date</groupId>
-            <artifactId>Date</artifactId>
+            <artifactId>dateservice</artifactId>
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
